fix: Social media icons too large

--- a/niall-paterson/partials/_fonts.scss
+++ b/niall-paterson/partials/_fonts.scss
@@ -23,7 +23,7 @@ header {
 
 .social-media-wrapper {
     i {
-      font-size: $small-font * 0.9;
+      font-size: $small-font * 0.8;
     }
 }
 
